# ITI

./: CMakeLists.txt  batch.sh  compile_results.py  guten.sh  lzw  lzw.cpp  results.sh  to_gray.py
files/: decompress.txt
gutenberg/: 2_2.txt  5_1.txt  5_3.txt  6_3.txt  9_3.txt
output/: test2.txt  test3.txt
src/: .LZW.h.swp  LZW.h  decode.cpp  encode.cpp  main.cpp
